Changes in Shorewall 4.4.19 RC 1

1)  Correct release notes.

Changes in Shorewall 4.4.19 Beta 5

1)  Fix logical naming and bridge.

Changes in Shorewall 4.4.19 Beta 4

1)  Handle mis-configured ipsec host group on a bridge.

2)  Significantly improve bridge/ports handling.

3)  Allow port-lists in /etc/shorewall/rules.

Changes in Shorewall 4.4.19 Beta 3

1)  Allow /usr executables to be installed in a designated location.

2)  Allow Shorewall perl modules to be installed in a designated
    location.

Changes in Shorewall 4.4.19 Beta 2

1)  Minor rework of init-log creation in the installer.

2)  Add VRRP macro.

3)  Fix more params processing bugs.

4)  Do a better job of editing ICMP type lists.

5)  Allow /usr executables to be installed in a designated location.

6)  Allow Shorewall perl modules to be installed in a designated
    location.

Changes in Shorewall 4.4.19 Beta 1

1)  Place ACK packets in the highest priority band.

2)  Break ICMP lists into individual rules.

Changes in Shorewall 4.4.18 Final

1)  Correct handling of IPv6 host address in a net context.

2)  Restore <burst> in tcdevices.

3)  Correct handling of non-present interfaces and tcfilters.

Changes in Shorewall 4.4.18 RC 1

1)  Update Version.

Changes in Shorewall 4.4.18 Beta 4

1)  Fix trivalue handling AGAIN.

2)  Change default value of MODULE_PREFIX.

3)  Combine Policy and Rules Modules

4)  Move section processing to the Rules modules.

Changes in Shorewall 4.4.18 Beta 3

1)  Change default chain in FORWARD section of the accounting file.

2)  Restrict USER/GROUP to OUTPUT section.

3)  Restore prohibition of MAC addresses in unsectioned config.

4)  Fix several optimizer problems.

Changes in Shorewall 4.4.18 Beta 2

1)  Fix the 'local' Provider option in IPv6

2)  Remove hardcoded 0.0.0.0/0 from Providers.pm

3)  Correct an optimizer defect having to do with jumps containing a
    comment.

Changes in Shorewall 4.4.18 Beta 1

1)  Split up modules file.
