@@ -2,6 +2,10 @@ Changes in Shorewall 4.4.19 RC 1
 
 1)  Correct release notes.
 
+2)  Display mangle table in the output from 'shorewall show tc'.
+
+3)  Exit tcpost early if connection is marked.
+
 Changes in Shorewall 4.4.19 Beta 5
 
 1)  Fix logical naming and bridge.
